--- a/package.json
+++ b/package.json
@@ -1,37 +1,45 @@
 {
-  "name": "webapp",
-  "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
-  "keywords": [],
-  "dependencies": {
-    "ejs": "2.3.4",
-    "grunt": "1.0.1",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-jst": "1.0.0",
-    "grunt-contrib-less": "1.3.0",
-    "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
-    "include-all": "^1.0.0",
-    "rc": "1.0.1",
-    "sails": "~0.12.11",
-    "sails-disk": "~0.10.9"
-  },
-  "scripts": {
-    "debug": "node debug app.js",
-    "start": "node app.js"
-  },
+  "name": "generator-react-express-webpack-babel",
+  "version": "2.2.0",
+  "description": "Boilerplate for ReactJS project with ExpressJS server. It uses webpack and babel",
   "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/webapp.git"
+    "url": "git+https://github.com/tahnik/react-express-webpack-babel"
   },
-  "author": "anonymous node/sails user",
-  "license": ""
+  "keywords": [
+    "react",
+    "express",
+    "webpack",
+    "babel",
+    "yeoman-generator"
+  ],
+  "author": "Tahnik Mustasin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tahnik/react-express-webpack-babel/issues"
+  },
+  "homepage": "https://github.com/tahnik/react-express-webpack-babel#readme",
+  "dependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "express": "^4.14.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "redux": "^3.5.2",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "webpack-node-externals": "^1.2.0"
+  }
 }
